still trying to fix word wrap issue

--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -48,7 +48,6 @@ pre {
 	border-color: transparent;
 	padding: 0;
 	word-break: normal;
-	white-space: pre-wrap;
 }
 
 a, a:hover {
